<resources>
    <string name="app_name">港航服务站</string>
    <string name="app_name1">湖州港航报警</string>
    <string name="chat_with_kefu">咨询客服</string>
    <string name="set_user_tags">设置用户标签</string>
    <string name="clear_message_records">清空聊天记录</string>
    <string name="title_activity_tag_list">TagListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_change_tag">ChangeTagActivity</string>
    <string name="loginuser">用户</string>
    <string name="see">查看</string>
    <string name="update">修改</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="check">审核</string>
    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="reset">取消</string>
    <string name="save">保存</string>
    <string name="upload">提交</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="year">年</string>
    <string name="mouth">月</string>
    <string name="select">选择</string>
    <string name="Recoder">录像</string>
    <string name="moreing">释放加载更多</string>
    <string name="more">加载中····</string>
    <string name="searchResult">搜索结果</string>
    <string name="noResult">没有搜索到相关信息</string>
    <string name="department">群组</string>
    <string name="remind">设置闹钟</string>
    <string name="feedback">查看回馈</string>
    <string name="username_search_hint">请输入真实姓名</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="photograph">照相</string>
    <string name="schedule_attament">添加附件</string>
    <string name="soundrecord">录音</string>
    <string name="new_time">0:0</string>
    <string name="attament">附件</string>
    <string name="go_home">返回主页</string>
    <string name="zero">0</string>
    <string name="portdynmicnews_industryInfo">行业资讯</string>
     <string name="reportprompt">报告提示</string>
    <string name="bs_menulist03">船舶违章信息</string>
    <string name="bs_menulist05">船舶缴费信息</string>
    <string name="bs_sourch_btn">查询</string>
    <string name="bs_notice">请输入船名</string>
    <string name="bs_opentext">展开</string>
    <string name="bs_closetext">收起</string>
    <string name="bs_cbjbxx_txt01">船舶名称：</string>
    <string name="bs_cbjbxx_txt02">船检登记号：</string>
    <string name="bs_cbjbxx_txt03">船舶登记号：</string>
    <string name="bs_cbjbxx_txt04">船籍港：</string>
    <string name="bs_cbjbxx_txt05">船籍港代码：</string>
    <string name="bs_cbjbxx_txt06">船舶类型：</string>
    <string name="bs_cbjbxx_txt07">船舶类型代码：</string>
    <string name="bs_cbjbxx_txt08">主机总功率：</string>
    <string name="bs_cbjbxx_txt09">总吨位：</string>
    <string name="bs_cbjbxx_txt10">净吨位：</string>
    <string name="bs_cbjbxx_txt11">总长（m）：</string>
    <string name="bs_cbjbxx_txt12">船长（m）：</string>
    <string name="bs_cbjbxx_txt13">量吨甲板长（m）：</string>
    <string name="bs_cbjbxx_txt14">型宽（m）：</string>
    <string name="bs_cbjbxx_txt15">型深（m）：</string>
    <string name="bs_cbjbxx_txt16">参考载货量：</string>
    <string name="bs_cbjbxx_txt17">吃水空载：</string>
    <string name="bs_cbjbxx_txt18">吃水满载：</string>
    <string name="bs_cbjbxx_txt19">船舶所有人：</string>
    <string name="bs_cbjbxx_txt20">船舶经营人：</string>
    <string name="bs_cbjbxx_txt21">经营人联系电话：</string>
    <string name="bs_cbzsxx_txt00">证书编号：</string>
    <string name="bs_cbzsxx_txt01">证书名称：</string>
    <string name="bs_cbzsxx_txt02">发证日期：</string>
    <string name="bs_cbzsxx_txt03">有效期：</string>
    <string name="bs_cbwzxx_txt00">没有违章信息</string>
    <string name="bs_cbwzxx_Punishment">处罚：</string>
    <string name="bs_cbwzxx_PunishmentType01">警告</string>
    <string name="bs_cbwzxx_PunishmentType02">罚款</string>
    <string name="bs_cbwzxx_PunishmentType03">暂扣证照</string>
    <string name="bs_cbwzxx_PunishmentType04">吊销证照</string>
    <string name="bs_cbwzxx_PunishmentType05">没收船舶</string>
    <string name="bs_cbwzxx_PunishmentType06">没收非法财物</string>
    <string name="bs_cbwzxx_PunishmentType07">没收违法所得</string>
    <string name="bs_cbwzxx_PunishmentType08">责令停产停业</string>
    <string name="bs_cbwzxx_PunishmentType09">行政拘留</string>
    <string name="bs_cbwzxx_PunishmentType10">其他</string>
    <string name="bs_cbwzxx_yes">是</string>
    <string name="bs_cbwzxx_no">否</string>
    <string name="bs_cbwzxx_time">时间：</string>
    <string name="bs_cbwzxx_txt01">受理号：</string>
    <string name="bs_cbwzxx_txt02">中文船名：</string>
    <string name="bs_cbwzxx_txt03">受理时间：</string>
    <string name="bs_cbwzxx_txt04">案由：</string>
    <string name="bs_cbwzxx_txt05">发案时间：</string>
    <string name="bs_cbwzxx_txt06">发案地点：</string>
    <string name="bs_cbwzxx_txt07">案件类别：</string>
    <string name="bs_cbwzxx_txt08">主要事实：</string>
    <string name="bs_cbwzxx_txt09">执法手册编号：</string>
    <string name="bs_cbwzxx_txt10">违法内容：</string>
    <string name="bs_cbwzxx_txt11">违反条款：</string>
    <string name="bs_cbwzxx_txt12">处罚条款：</string>
    <string name="bs_cbwzxx_txt13">处罚意见：</string>
    <string name="bs_cbwzxx_txt14">处罚类别：</string>
    <string name="bs_cbwzxx_txt15">是否处罚：</string>
    <string name="bs_cbwzxx_txt16">是否结案：</string>
    <string name="bs_cbwzxx_txt17">结案日期：</string>
    <string name="bs_cbwzxx_no_record">船舶记录良好 暂无违章信息</string>
    <string name="bs_cbjfxx_noreslut">抱歉，搜索失败</string>
    <string name="bs_cbjfxx_money">应缴金额：</string>
    <string name="bs_cbjfxx_money2">实缴金额：</string>
    <string name="bs_cbjfxx_startday">有效期起：</string>
    <string name="bs_cbjfxx_endday">有效期至：</string>
    <string name="bs_cbjfxx_owe">欠费：</string>
    <string name="bs_cbjfxx_txt">没有缴费信息</string>
    <string name="bs_cbjfxx_txt01">开票序列号：</string>
    <string name="bs_cbjfxx_txt02">缴费项目：</string>
    <string name="bs_cbjfxx_txt03">应缴金额（元）：</string>
    <string name="bs_cbjfxx_txt04">实缴金额（元）：</string>
    <string name="bs_cbjfxx_txt05">有效期起：</string>
    <string name="bs_cbjfxx_txt06">有效期止：</string>
    <string name="bs_cbjfxx_txt07">开票日期：</string>
    <string name="bs_cbjfxx_txt08">开票单位：</string>
    <string name="bs_cbjfxx_txt09">开票地市：</string>
    <string name="bs_cbjfxx_txt10">退费标志：</string>
    <string name="bs_cbjfxx_txt11">作废标志：</string>
    <string name="bs_cbjfxx_txt12">销号标志：</string>
    <string name="bs_cbjfxx_warn">欠费信息</string>
    <string name="bs_cbjfxx_nowarn">已缴费信息</string>
    <string name="illegal_check_do">审核</string>
    <string name="illegal_check_reasult">审核结果：</string>
    <string name="illegal_check_content">审核建议：</string>
    <string-array name="illegal_check_spinner">
        <item>通过</item>
        <item>驳回</item>
    </string-array>
    <string name="addresslist_search">搜索</string>
    <string name="addresslist_quxiao">取消</string>
    <string name="addresslist_nofind">没有数据</string>
    <string name="addresslist_tel">电话</string>
    <string name="addresslist_del">部门</string>
    <string name="knowledge_button">知识库</string>
    <string name="portdynmicnews_main">港航动态</string>
    <string name="portdynmicnews_see">港航动态查看</string>
    <string name="portnotice_main">通知公告</string>
    <string name="portnotice_see">通知公告查看</string>
    <string name="portnavigation_main">航行公告</string>
    <string name="portnavigation_see">航行公告查看</string>
    <string name="other_main">船舶违章</string>
    <string name="attendace_main">签到签退</string>
    <string name="attendace_sign_in">签到</string>
    <string name="attendace_sign_insee">查看详情</string>
    <string name="attendace_sign_back">签退</string>
    <string name="attendace_sign_backsee">签退详情</string>
    <string name="attendace_location">提交当前位置</string>
    <string name="attendace_sign_list">签到签退</string>
    <string name="attendace_sign_load_more">加载更多</string>
    <string name="leaveandovertime_submit">提交</string>
    <string name="leaveandovertime_approval">审批</string>
    <string name="leaveandovertime_approval_result">审批结果：</string>
    <string name="leaveandovertime_approval_Opinion">审批意见：</string>
    <string name="leaveandover_newlist_approvalbutton">待审批</string>
    <string name="leaveandover_newlist_approvalbutton1">已审批</string>
    <string name="leaveandovertime_newlist_result">审批状态：</string>
    <string name="leaveandovertime_newlist_button">详情</string>
    <string name="leaveandovertime_newlist_button1">审批记录</string>
    <string name="leaveandovertime_newlist_add">请假申请</string>
    <string name="leaveandovertime_newlist_kindName">假别：</string>
    <string name="leaveandovertime_newlist_kindNameselect">假别选择：</string>
    <string name="leaveandovertime_newlist_leaveOrOtReason">请填写事由</string>
    <string name="electricreport_main">航行电子报告单</string>
    <string name="electricreport_main_name">船名号</string>
    <string name="electricreport_main_inputname">请输入船舶的名称</string>
    <string name="electricreport_main_draft">实际吃水</string>
    <string name="electricreport_main_inputdraft">请输入实际吃水量</string>
    <string name="electricreport_main_shipUserName">船长姓名</string>
    <string name="electricreport_main_inputshipUserName">请输入船长的姓名</string>
    <string name="electricreport_main_arrival">预计进出港时间</string>
    <string name="electricreport_main_inputarrival">请输入预计进出港时间</string>
    <string name="electricreport_main_pier">本次作业码头</string>
    <string name="electricreport_main_inputpier">请输入靠泊码头</string>
    <string name="electricreport_main_cargoSituation">载货情况</string>
    <string name="electricreport_main_inputcargoSituation">请输入载货情况</string>
    <string name="electricreport_main_type">载货种类</string>
    <string name="electricreport_main_inputtype">请输入载货种类</string>
    <string name="electricreport_main_cargoNumber">载货数量</string>
    <string name="electricreport_main_inputcargoNumber">请输入数量</string>
    <string name="electricreport_main_user">上报人</string>
    <string name="electricreport_main_name1">湖州港</string>
    <string name="electricreport_main_name2">嘉兴港</string>
    <string name="electricreport_main_name3">杭州港口</string>
    <string name="electricreport_main_name4">嘉善码头</string>
    <string name="electricreport_main_ty1">煤炭及制品</string>
    <string name="electricreport_main_ty2">石油天然气及制品</string>
    <string name="electricreport_main_ty3">金属矿石</string>
    <string name="electricreport_main_ty4">木材</string>
    <string name="electricreport_main_ty5">水泥</string>
    <string name="electricreport_main_ty6">非金属矿石</string>
    <string name="electricreport_main_ty7">农林牧渔产品</string>
    <string name="electricreport_main_ty8">其他货物</string>
    <string name="electricreport_main_unit1">吨</string>
    <string name="electricreport_main_unit2">升</string>
    <string name="electricreport_main_unit3">包</string>
    <string name="electricreport_main_unit4">箱</string>
    <string name="electricreport_main_unit5">桶</string>
    <string name="electricreport_main_unit6">袋</string>
    <string name="electricreport_main_unit7">件</string>
    <string name="electricreport_main_unit8">台</string>
    <string name="electricreport_main_name11">进港</string>
    <string name="electricreport_main_name21">出港</string>
    <string name="electricreport_list">航行电子报告信息列表</string>
    <string name="electricreport_type">选择货物种类</string>
    <string name="login_usename_title">用户名</string>
    <string name="login_pwd_title">密码</string>
    <string name="login_use">请输入用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="register">注册</string>
    <string name="login_update">切换帐号</string>
    <string name="change_Binding">绑定信息</string>
    <string name="login_checkbox1">保存密码</string>
    <string name="login_checkbox2">自动登录</string>
    <string name="setup_title">设置</string>
    <string name="setup_update_password">修改密码</string>
    <string name="setup_update_ver">检查更新</string>
    <string name="setup_update_uplad">上传管理</string>
    <string name="setup_person">个人资料</string>
    <string name="setup_above">关于我们</string>
    <string name="setup_zixun">咨询</string>
    <string name="login_warn">报警</string>
    <string name="login_warn_110">110报警</string>
    <string name="login_warn_12395">12395报警</string>
</resources>