<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/warn_titleline"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_backgrundmenu"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/warn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:contentDescription="@string/back"
            android:src="@drawable/title_back"
            android:onClick="Finish" >
        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login_warn"
            android:textColor="#0067ac"
            android:textSize="18sp" >
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/warn_110"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warn_titleline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:text="@string/login_warn_110" />

    <TextView
        android:id="@+id/warn_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/warn_110"
        android:background="@color/line_color" />

    <Button
        android:id="@+id/warn_12395"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/warn_line"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/login_warn_12395" />

</RelativeLayout>